5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1871_1711.log
== TEST (2019-07-02 16:01:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(input(":"))

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:02:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input(":")))

print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:02:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input(":")))

print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:10:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))


print(mat)
print(al)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:12:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in range(mat):
	vet[i] = sum[i,:]

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:13:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in arange(mat):
	vet[i] = sum[i,:]

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape.(mat):
	vet[i] = sum[i,:]

print(vet)	

-- ERROR:
File "XXXX", line 9
    for i in shape.(mat):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape.(mat):
	vet[i] = sum[i,:]

print(vet)	

-- ERROR:
File "XXXX", line 9
    for i in shape.(mat):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum[i,:]

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum([i,:])

print(vet)	

-- ERROR:
File "XXXX", line 10
    vet[i] = sum([i,:])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum([i,j])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for j in shape(mat):
	for i in shape(mat):
		vet[i] = sum([i,j])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for j in shape(mat):
	for i in shape(mat):
		vet[i] = sum(mat[i,j])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)
sum(mat[i,j])

print(sum(mat[i,j]))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for j in mat.shape[0
	for i in shape(mat):
		vet[i] = sum(mat[i,j])

print(vet)	

-- ERROR:
File "XXXX", line 10
    for i in shape(mat):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for j in mat.shape[0]:
	for i in shape(mat):
		vet[i] = sum(mat[i,j])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in mat.shape[0]:
		vet[i] = sum(mat[i,:])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in mat.shape[0]:
		vet[i] = sum(mat[i,:])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in mat.shape[0]:
		vet[i] = sum(mat[i,:])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
		vet[i] = sum(mat[i,:])

print(vet)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum(mat[i,:])
	print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum(mat[0])
	print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum(mat[0])
	print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

vet  = zeros(mat.shape[0], dtype = int)

for i in shape(mat):
	vet[i] = sum(mat)
	print(vet)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))


print(sum(mat))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:21:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))


print(sum(mat))
		
-- EXECUTION TIME:
1.44886
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
52.3
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
43.5
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
58.00000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))


print(sum(mat/size(mat)))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:22:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.22156
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
al = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:32:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

soma = sum(mat)/size(mat)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.03577
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

soma = sum(notas)/size(notas)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:33:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

soma = sum(notas)/size(notas)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.08531
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat):
	soma = sum(notas)/size(notas)

if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat):
	soma = sum(notas)/size(notas)
soma
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat):
	soma = sum(notas)/size(notas)

soma
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat):
	soma = sum(notas)/size(notas)
	
	if(soma >= 5):
		print("PASSOU")
	else:
		print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat[0]):
	soma = sum(notas)/size(notas)
	
	if(soma >= 5):
		print("PASSOU")
	else:
		print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

for i in shape(mat):
	soma = sum(notas)/size(notas)
	
		if(soma >= 5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
-- ERROR:
File "XXXX", line 10
    if(soma >= 5):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero de alunos: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:43:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.116
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:43:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
aluno = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.12224
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
Digite a matriz: Digite o numero do aluno: REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
Digite a matriz: Digite o numero do aluno: PASSOU
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:43:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.0325
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

for i in shape(notas):
	soma = sum(notas[i,:])
print(soma)	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))
soma = zeros(0)
for i in shape(notas):
	soma[i] = sum(notas[i,:])
print(soma)	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:49:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5 and soma <= 10):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.04915
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:50:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5 and soma <= 10):
	print("PASSOU")
elif(soma >= 0 and soma < 5):
	print("REPROVOU")
		
-- EXECUTION TIME:
1.00073
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:52:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

notas = array(eval(input("Digite a matriz: ")))
alunos = int(input("Digite o numero do aluno: "))

soma = sum(notas)/size(notas)
	
if(soma >= 5):
	print("PASSOU")
else:
	print("REPROVOU")
		
-- EXECUTION TIME:
1.05371
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
